--- a/process/sass/style.scss
+++ b/process/sass/style.scss
@@ -1,3 +1,22 @@
+@import url(http://fonts.googleapis.com/css?family=Roboto+Slab|Merriweather|Josefin+Slab|Oswald|Bree+Serif);
+
+$darkblue:  #022933;
+$offwhite:  #eee8d6;
+$yellow:    #ffba00;
+$blue:      #0076a3;
+$green:     #548c27;
+$orange:    #f39856;
+$red:       #d14348;
+$purple:    #6d73c2;
+
+$color-main:        $darkblue;
+$color-backgrounds: $offwhite;
+$color-headlines:   $red;
+
+$fallback-fonts: "Segoe UI", -apple-system, BlinkMacSystemFont, "Roboto", "Helvetica Neue", "Helvetica", sans-serif;
+$font-main: "Merriweather", $fallback-fonts;
+$font-highlight: "Bree Serif", $fallback-fonts;
+
 html {
     font-size: 62.5%;
 }
@@ -6,10 +25,14 @@ body {
     margin: 0;
     padding: 0;
     font-size: 1.8rem;
-    font-family: "Segoe UI", -apple-system, BlinkMacSystemFont, "Roboto",
-        "Helvetica Neue", "Helvetica", sans-serif;
-    color: #022933;
-    background-color: #eee8d6;
+    font-family: $font-main;
+    color: $color-main;
+    background-color: $color-backgrounds;
+}
+
+h1,h2,h3,h4,h5,h6 {
+    font-family: $font-highlight;
+    color: $color-headlines;
 }
 
 .container {
