--- a/process/sass/style.scss
+++ b/process/sass/style.scss
@@ -1,4 +1,7 @@
 @import "variables";
 @import "vendor";
+@import "mixins";
 @import "base";
+
 @import "modules/media";
+@import "modules/backgrounds";
