--- a/process/sass/style.scss
+++ b/process/sass/style.scss
@@ -2,6 +2,7 @@
 @import "vendor";
 @import "mixins";
 @import "base";
+@import "interface";
 
 @import "modules/media";
 @import "modules/backgrounds";
