--- a/process/sass/_mixins.scss
+++ b/process/sass/_mixins.scss
@@ -11,3 +11,13 @@
     background-size: cover;
     height: $height;
 }
+
+@mixin clearfix {
+    &::before, &::after {
+        content: "";
+        display: table;
+    }
+    &::after {
+        clear: both;
+    }
+}
