--- a/process/sass/_variables.scss
+++ b/process/sass/_variables.scss
@@ -1,3 +1,5 @@
+/* Load fonts */
+// Load fonts
 @import url(http://fonts.googleapis.com/css?family=Roboto+Slab|Merriweather|Josefin+Slab|Oswald|Bree+Serif);
 
 $darkblue:  #022933;
