--- a/process/sass/_mixins.scss
+++ b/process/sass/_mixins.scss
@@ -21,3 +21,16 @@
         clear: both;
     }
 }
+
+@mixin imagegrid($qty, $margin) {
+    width: (100% - (($qty) * $margin)) / $qty;
+    &:nth-child(n) {
+        margin-bottom: $margin;
+        margin-right: $margin;
+    }
+
+    &:nth-child(#{qty}n) {
+        margin-bottom: 0;
+        margin-right: 0;
+    }
+}
