--- a/process/sass/_mixins.scss
+++ b/process/sass/_mixins.scss
@@ -1,42 +1,46 @@
 @mixin backImage($image, $height: 100vh, $position: center center) {
-  background:
-  linear-gradient(
-      to bottom,
-    rgba(0,0,0,0),
-    rgba(0,0,0,.6)
-    ),
-    url($image);
-  background-repeat: no-repeat;
-  background-position: $position;
-  background-size: cover;
-  height: $height;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)),
+        url($image);
+    background-repeat: no-repeat;
+    background-position: $position;
+    background-size: cover;
+    height: $height;
 }
 
 @mixin clearfix {
-  &::before, &::after {
-    content: "";
-    display: table;
-  }
-  &::after {
-    clear: both;
-  }
+    &::before,
+    &::after {
+        content: "";
+        display: table;
+    }
+    &::after {
+        clear: both;
+    }
 }
 
 @mixin imagegrid($qty, $margin) {
-  width: (100% - (($qty) * $margin)) / $qty;
-  &:nth-child(n) {
-    margin-bottom: $margin;
-    margin-right: $margin;
-  }
+    width: (100% - (($qty) * $margin)) / $qty;
+    &:nth-child(n) {
+        margin-bottom: $margin;
+        margin-right: $margin;
+    }
 
-  &:nth-child(#{$qty}n) {
-      margin-bottom: 0;
-      margin-right: 0;
-  }
+    &:nth-child(#{$qty}n) {
+        margin-bottom: 0;
+        margin-right: 0;
+    }
 }
 
-@mixin break($length) {
-    @media (min-width: $length) {
-        @content;
+@mixin break($args...) {
+    @if length($args) == 1 {
+        @media (min-width: nth($list: $args, $n: 1)) {
+            @content;
+        }
+    }
+
+    @if length($args) == 2 {
+        @media (min-width: nth($list: $args, $n: 1)) and (max-width: nth($args, 2)) {
+            @content;
+        }
     }
 }
