--- a/process/sass/_base.scss
+++ b/process/sass/_base.scss
@@ -11,12 +11,19 @@ body {
     background-color: $color-backgrounds;
 }
 
+$color-headlines: $blue, $purple, $green, $red, $orange, $yellow;
+
 h1, h2, h3, h4, h5, h6 {
     font-family: $font-highlight;
-    color: $color-headlines;
 }
 
 .container {
     width: 80%;
     margin: 0 auto;
+}
+
+@for $item from 1 through length($color-headlines) {
+    h#{$item} {
+        color: nth($list: $color-headlines, $n: $item);
+    }
 }
